--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,47 @@ body {
 .pageFooter p {
   color: #fff;
 }
+
+.pageIntrodution {
+  background-color: var(--dark-background-color);
+  padding: 64px 0;
+}
+
+.pageIntrodution .container {
+  display: flex;
+  width: 100%;
+  gap: 32px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pageIntrodution div {
+  width: 50%;
+}
+
+.pageIntrodution__weclome h2 {
+  color: var(--hero-main-text-color);
+  font-size: var(--hero-main-text-size);
+  font-weight: var(--hero-main-text-font-weight);
+  margin: 18px 0;
+}
+
+.pageIntrodution__weclome p {
+  color: var(--hero-secondary-text-color);
+  font-size: var(--hero-secondary-text-size);
+}
+
+.btn {
+  background-color: var(--button-color);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 6px 12px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.pageIntrodution__image img {
+  border-radius: 8px;
+}
