--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,46 @@ body {
 .pageIntrodution__image img {
   border-radius: 8px;
 }
+
+.abilities {
+  padding: 48px 0;
+}
+
+.abilities .container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 32px;
+}
+
+.abilities__header {
+  text-align: center;
+  color: var(--information-header-text-color);
+  font-size: var(--information-header-text-size);
+  font-weight: var(--information-header-text-font-weight);
+  margin-top: 16px;
+}
+
+.abilities__skill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 150px;
+}
+
+.abilities__skillImage {
+  padding: 5px;
+  border: 2px solid yellow;
+  border-radius: 4px;
+}
+
+.abilities__skill h4 {
+  margin: 0;
+  margin-top: 16px;
+  text-align: center;
+}
+
+.abilities__skill p {
+  text-align: center;
+}
