implement quote section

--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,24 @@ body {
 .abilities__skill p {
   text-align: center;
 }
+
+.quote {
+  background-color: var(--quote-section-bc);
+}
+
+.quote .container {
+  padding: 32px 0;
+}
+
+.quote p {
+  color: var(--quote-text-color);
+  font-size: var(--quote-text-size);
+  font-style: var(--quote-text-font-style);
+  font-weight: var(--quote-text-font-weight);
+  text-align: center;
+}
+
+.quote figcaption {
+  text-align: right;
+  margin-right: 64px;
+}
